--- a/combo.html
+++ b/combo.html
@@ -50,35 +50,7 @@
 					<polygon points="700,84.4 1047.1,685.6 352.9,685.6 352.9,685.6 352.9,685.6 352.9,685.6"/>
 				</svg>
 			</div>
-			<header class="header space2">
-				<div class="header-wrapper">
-					<div class="nav-but-wrap">
-						<a href="index.html" class="hover-target animsition-link padding-element-l">
-							<h4>323 hours</h4>
-						</a>
-						<a href="about.html" class=" roba hover-target animsition-link padding-element">
-							<h4>About</h4>
-						</a>
-						<a href="combinations.html" class=" roba hover-target animsition-link padding-element">
-							<h4>All combinations</h4>
-						</a>
-						<a href="combo.html" class=" roba hover-target animsition-link padding-element">
-							<h4>prova</h4>
-						</a>
-						<div class="menu-icon hover-target">
-						</div>
-					</div>
-				</div>
-			</header>
 
-				<div class="position" id="shuffle">
-		<!--		<div class="button" id="shuffle"> <p>Shuffle</p></div> -->
-
-
-		</div>
-			<div class="position design">
-		<input class="shuf" type="button" onclick="getItem()" value="shuffle"/>
-	    </div>
 
 
 			<div class="content-wrap caso" id="0">
@@ -91,34 +63,166 @@
 
 				</div>
 			</div>
+
 			<div class="content-wrap caso" id="1">
 				<div class="content content--layout content--layout-1">
-			<img class="content__img" src="img/time.png" alt="Some image" />
-			<h4 class="content__desc">If you got your time back, how many things could you do?</h4>
-					<h1 class="content__title" id="tit">in 323 hours <br>you can:</h1>
+			<img class="content__img" src="/img/trip.png" alt="Some image" />
+			<h4 class="content__desc">Take a flight <br>from Milan to Tokyo </h4>
+					<h1 class="content__title">23,83 <br> times</h1>
+					<a href="combinations.html" class="content__link">Trips</a>
 		<!--			<p class="content__author">Walter Mastricht</p> -->
-				<br>
 
 				</div>
 			</div>
+
 			<div class="content-wrap caso" id="2">
 				<div class="content content--layout content--layout-2">
-					<img class="content__img" src="img/5.jpg" alt="Some image" />
-					<h3 class="content__title">bunch</h3>
+					<img class="content__img" src="/img/trip.png" alt="Some image" />
+					<h1 class="content__title">20,06 <br>times</h1>
 			<!--		<p class="content__author">Nikimo Westlane</p> -->
-					<p class="content__desc">The neverending quest, once and forever.</p>
-					<a href="#" class="content__link">Discover</a>
+					<h4 class="content__desc">Take a flight <br>from Milan to Buenos Aires</h4>
+					<a href="combinations.html" class="content__link">Trips</a>
 				</div>
 			</div>
+
 			<div class="content-wrap caso" id="3">
 				<div class="content content--layout content--layout-3">
-					<img class="content__img" src="img/3.jpg" alt="Some image" />
-					<h3 class="content__title">found</h3>
+					<img class="content__img" src="/img/trip.png" alt="Some image" />
+					<h1 class="content__title">1 time</h1>
 			<!--		<p class="content__author">Jane Westhall</p> -->
-					<p class="content__desc">Lost or found? That's the question today.</p>
-					<a href="#" class="content__link">Discover</a>
+					<h4 class="content__desc">Walking from Reggio Calabria to Czech Republic</h4>
+					<a href="combinations.html" class="content__link">Trips</a>
 				</div>
 			</div>
+
+			<div class="content-wrap caso" id="4">
+				<div class="content content--layout content--layout-1">
+			<img class="content__img" src="/img/trip.png" alt="Some image" />
+			<h4 class="content__desc">Flying from Milan <br>to Shanghai a/r </h4>
+					<h1 class="content__title">14 times</h1>
+					<a href="combinations.html" class="content__link">Trips</a>
+		<!--			<p class="content__author">Walter Mastricht</p> -->
+
+				</div>
+			</div>
+
+			<div class="content-wrap caso" id="5">
+				<div class="content content--layout content--layout-2">
+					<img class="content__img" src="/img/music.png" alt="Some image" />
+					<h1 class="content__title">131,83 <br>times</h1>
+			<!--		<p class="content__author">Nikimo Westlane</p> -->
+					<h4 class="content__desc">Listening PAZZESKA <br>by MYSS KETA</h4>
+					<a href="combinations.html" class="content__link">Music</a>
+				</div>
+			</div>
+
+			<div class="content-wrap caso" id="6">
+				<div class="content content--layout content--layout-3">
+					<img class="content__img" src="/img/trip.png" alt="Some image" />
+					<h1 class="content__title">4,14 times</h1>
+			<!--		<p class="content__author">Jane Westhall</p> -->
+					<h4 class="content__desc">Travel all over <br>Italy with a bicycle</h4>
+					<a href="combinations.html" class="content__link">Trips</a>
+				</div>
+			</div>
+
+
+						<div class="content-wrap caso" id="7">
+							<div class="content content--layout content--layout-1">
+						<img class="content__img" src="/img/music.png" alt="Some image" />
+						<h4 class="content__desc">Listening Non Me Lo So Spiegare by Tiziano Ferro</h4>
+								<h1 class="content__title">23,83 <br> times</h1>
+								<a href="combinations.html" class="content__link">Music</a>
+					<!--			<p class="content__author">Walter Mastricht</p> -->
+
+							</div>
+						</div>
+
+						<div class="content-wrap caso" id="8">
+							<div class="content content--layout content--layout-2">
+								<img class="content__img" src="/img/book.png" alt="Some image" />
+								<h1 class="content__title">6,59 <br>times</h1>
+						<!--		<p class="content__author">Nikimo Westlane</p> -->
+								<h4 class="content__desc">Reading the Bible</h4>
+								<a href="combinations.html" class="content__link">Books</a>
+							</div>
+						</div>
+
+						<div class="content-wrap caso" id="9">
+							<div class="content content--layout content--layout-3">
+								<img class="content__img" src="/img/trip.png" alt="Some image" />
+								<h1 class="content__title">1 time</h1>
+						<!--		<p class="content__author">Jane Westhall</p> -->
+								<h4 class="content__desc"></h4>
+								<a href="combinations.html" class="content__link">Trips</a>
+							</div>
+						</div>
+
+
+									<div class="content-wrap caso" id="10">
+										<div class="content content--layout content--layout-1">
+									<img class="content__img" src="/img/trip.png" alt="Some image" />
+									<h4 class="content__desc"></h4>
+											<h1 class="content__title">23,83 <br> times</h1>
+											<a href="combinations.html" class="content__link">Trips</a>
+								<!--			<p class="content__author">Walter Mastricht</p> -->
+
+										</div>
+									</div>
+
+									<div class="content-wrap caso" id="11">
+										<div class="content content--layout content--layout-2">
+											<img class="content__img" src="/img/trip.png" alt="Some image" />
+											<h1 class="content__title">20,06 <br>times</h1>
+									<!--		<p class="content__author">Nikimo Westlane</p> -->
+											<h4 class="content__desc"></h4>
+											<a href="combinations.html" class="content__link">Trips</a>
+										</div>
+									</div>
+
+									<div class="content-wrap caso" id="12">
+										<div class="content content--layout content--layout-3">
+											<img class="content__img" src="/img/trip.png" alt="Some image" />
+											<h1 class="content__title">1 time</h1>
+									<!--		<p class="content__author">Jane Westhall</p> -->
+											<h4 class="content__desc"></h4>
+											<a href="combinations.html" class="content__link">Trips</a>
+										</div>
+									</div>
+
+
+
+												<div class="content-wrap caso" id="13">
+													<div class="content content--layout content--layout-1">
+												<img class="content__img" src="/img/trip.png" alt="Some image" />
+												<h4 class="content__desc"></h4>
+														<h1 class="content__title">23,83 <br> times</h1>
+														<a href="combinations.html" class="content__link">Trips</a>
+											<!--			<p class="content__author">Walter Mastricht</p> -->
+
+													</div>
+												</div>
+
+												<div class="content-wrap caso" id="14">
+													<div class="content content--layout content--layout-2">
+														<img class="content__img" src="/img/trip.png" alt="Some image" />
+														<h1 class="content__title">20,06 <br>times</h1>
+												<!--		<p class="content__author">Nikimo Westlane</p> -->
+														<h4 class="content__desc"></h4>
+														<a href="combinations.html" class="content__link">Trips</a>
+													</div>
+												</div>
+
+												<div class="content-wrap caso" id="15">
+													<div class="content content--layout content--layout-3">
+														<img class="content__img" src="/img/trip.png" alt="Some image" />
+														<h1 class="content__title">1 time</h1>
+												<!--		<p class="content__author">Jane Westhall</p> -->
+														<h4 class="content__desc"></h4>
+														<a href="combinations.html" class="content__link">Trips</a>
+													</div>
+												</div>
+
 	<!--		<div class="content-wrap">
 				<div class="content content--layout content--layout-4">
 					<img class="content__img" src="img/4.jpg" alt="Some image" />
