--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
 
 				</div>
 			</div>
-			<div class="content-wrap caso" id="1">
+			<div class="content-wrap caso animation" id="1">
 				<div class="content content--layout content--layout-1">
 			<img class="content__img" src="img/time.png" alt="Some image" />
 			<h4 class="content__desc">If you got your time back, how many things could you do?</h4>
@@ -101,7 +101,7 @@
 
 				</div>
 			</div>
-			<div class="content-wrap caso" id="2">
+			<div class="content-wrap caso animation" id="2">
 				<div class="content content--layout content--layout-2">
 					<img class="content__img" src="img/5.jpg" alt="Some image" />
 					<h3 class="content__title">bunch</h3>
@@ -110,7 +110,7 @@
 					<a href="#" class="content__link">Discover</a>
 				</div>
 			</div>
-			<div class="content-wrap caso" id="3">
+			<div class="content-wrap caso animation" id="3">
 				<div class="content content--layout content--layout-3">
 					<img class="content__img" src="img/3.jpg" alt="Some image" />
 					<h3 class="content__title">found</h3>
