--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 				</div>
 			</header>
 
-			<div class="content-wrap caso" id="1">
+			<div class="content-wrap caso animation" id="1">
 				<div class="content content--layout content--layout-1">
 			<img class="content__img" src="img/idea.png" alt="Some image" />
 			<h4 class="content__desc about-t">Covid has had an important impact on all our habits, prompting us to <span style="color:#E6E948;">create</span> new and intelligent solutions to continue to perform our daily lives in the best possible way.
@@ -81,7 +81,7 @@ The activities did not stop and neither did the session of the Polytechnic, leav
 
 				</div>
 			</div>
-			<div class="content-wrap caso" id="2">
+			<div class="content-wrap caso animation" id="2">
 				<div class="content content--layout content--layout-2">
 					<img class="content__img" src="img/translation.png" alt="Some image" />
 					<h1 class="content__title">Translation</h1>
@@ -110,7 +110,7 @@ The activities did not stop and neither did the session of the Polytechnic, leav
 			</div> -->
 			<!-- Related demos -->
 			<section class="content content--related">
-				<div class="content-wrap caso">
+				<div class="content-wrap caso animation">
 					<div class="content content--layout content--layout-2">
 						<img class="content__img" src="img/credits.png" alt="Some image" />
 						<h1 class="content__title">Credits</h1>
