--- a/index.html
+++ b/index.html
@@ -109,22 +109,22 @@
 				</div>
 
 				<div id="lol9" class="grid__item pos-9">
-					<div class="grid__item-img effect" style="background-image:url(https://i.ibb.co/3CCzhBS/mine-1.gif);"></div>
+					<div class="grid__item-img effect"></div>
 				</div>
 				<div id="nope9" class="grid__item pos-9 effect-1">
-					<div class="grid__item-img effect-1" style="background-image:url(https://i.ibb.co/9phJhXd/mineok-1.gif);"></div>
+					<div class="grid__item-img effect-1"><img src="/img/tv.png" style="width:56%;"></div>
 				</div>
 
 				<div id="lol10" class="grid__item pos-10">
 					<div class="grid__item-img effect"></div>
 				</div>
 				<div id="nope10" class="grid__item pos-10 effect-1">
-					<div class="grid__item-img effect-1" style="background-image:url(https://i.ibb.co/QDXM7h5/elsaok-1.gif);"></div>
+					<div class="grid__item-img effect-1"></div>
 				</div>
 
 
 				<div id="lol11" class="grid__item pos-11">
-					<div  class="grid__item-img effect" style="background-image:url(https://i.ibb.co/QCVCVQ7/spider-3.gif);"></div>
+					<div  class="grid__item-img effect"></div>
 				</div>
 				<div id="nope11" class="grid__item pos-11 effect-1">
 					<div class="grid__item-img effect-1"></div>
@@ -170,7 +170,10 @@
 <!-- DIV STICKER -->
 
 					<div id="enter" class=" justify-content-center align-self-center">
-						<a href="home.html" ><img class="justify-content-right align-self-center stickerhome" src="img/time.png"></a>
+						<a href="home.html" >
+							<input class="justify-content-center align-self-center stickerhome" type="button" value="GO!"/>
+							<!--	<img class="justify-content-right align-self-center stickerhome" src="img/go.png"> -->
+						</a>
 					</div>
 
 
