--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>323 hours</title>
 
-	<link rel="icon" type="image/png" href="/img/time.png">
+	<link rel="icon" type="image/png" href="./img/time.png">
 	<link rel="apple-touch-icon" href="ico/pple-touch-icon.jpg">
 	<link rel="apple-touch-icon" sizes="72x72" href="ico/apple-touch-icon-72x72.jpg">
 	<link rel="apple-touch-icon" sizes="114x114" href="ico/apple-touch-icon-114x114.jpg">
@@ -53,12 +53,12 @@
 					<div class="grid__item-img"></div>
 				</div>
 				<div id="nope" class="grid__item pos-1 effect-1">
-					<div class="grid__item-img effect-1"><img src="/img/music.png" style="width:65%;"></div>
+					<div class="grid__item-img effect-1"><img src="./img/music.png" style="width:65%;"></div>
 				</div>
 
 
 				<div id="lol2" class="grid__item pos-2">
-					<div class="grid__item-img effect"><img src="/img/book.png" style="width:53%;"></div>
+					<div class="grid__item-img effect"><img src="./img/book.png" style="width:53%;"></div>
 				</div>
 				<div id="nope2" class="grid__item pos-2 effect-1">
 					<div class="grid__item-img effect-1"></div>
@@ -66,17 +66,17 @@
 
 
 				<div id="lol3" class="grid__item pos-3">
-					<div class="grid__item-img effect"><img src="/img/cup.png" style="width:54%;"></div>
+					<div class="grid__item-img effect"><img src="./img/cup.png" style="width:54%;"></div>
 				</div>
 				<div id="nope3" class="grid__item pos-3 effect-1">
-					<div class="grid__item-img effect-1"><img src="/img/cup.png" style="width:54%;"></div>
+					<div class="grid__item-img effect-1"><img src="./img/cup.png" style="width:54%;"></div>
 				</div>
 
 				<div id="lol4" class="grid__item pos-4">
-					<div class="grid__item-img effect"><img src="/img/book.png" style="width:54%;"></div>
+					<div class="grid__item-img effect"><img src="./img/book.png" style="width:54%;"></div>
 				</div>
 				<div id="nope4" class="grid__item pos-4 effect-1">
-					<div class="grid__item-img effect-1"><img src="/img/book.png" style="width:48%;"></div>
+					<div class="grid__item-img effect-1"><img src="./img/book.png" style="width:48%;"></div>
 				</div>
 
 
@@ -84,7 +84,7 @@
 					<div class="grid__item-img effect"></div>
 				</div>
 				<div id="nope5" class="grid__item pos-5 effect-1">
-					<div class="grid__item-img effect-1"><img src="/img/trip.png" style="width:50%;"></div>
+					<div class="grid__item-img effect-1"><img src="./img/trip.png" style="width:50%;"></div>
 				</div>
 
 				<div id="lol6" class="grid__item pos-6">
@@ -112,7 +112,7 @@
 					<div class="grid__item-img effect"></div>
 				</div>
 				<div id="nope9" class="grid__item pos-9 effect-1">
-					<div class="grid__item-img effect-1"><img src="/img/tv.png" style="width:56%;"></div>
+					<div class="grid__item-img effect-1"><img src="./img/tv.png" style="width:56%;"></div>
 				</div>
 
 				<div id="lol10" class="grid__item pos-10">
