--- a/home - Copy.html
+++ b/home - Copy.html
@@ -62,20 +62,40 @@
 						<a href="combinations.html" class=" roba hover-target animsition-link padding-element">
 							<h4>All combinations</h4>
 						</a>
+						<a href="combo.html" class=" roba hover-target animsition-link padding-element">
+							<h4>prova</h4>
+						</a>
 						<div class="menu-icon hover-target">
 						</div>
 					</div>
 				</div>
 			</header>
 
+				<div class="position" id="shuffle">
+		<!--		<div class="button" id="shuffle"> <p>Shuffle</p></div> -->
+
+
+		</div>
+			<div class="position design">
+		<input class="shuf" type="button" onclick="getItem()" value="shuffle"/>
+	    </div>
+
+
+			<div class="content-wrap caso" id="0">
+				<div class="content content--layout content--layout-1">
+			<img class="content__img" src="img/time.png" alt="Some image" />
+			<h4 class="content__desc">If you got your time back, how many things could you do?</h4>
+					<h1 class="content__title" id="tit">in 323 hours <br>you can:</h1>
+		<!--			<p class="content__author">Walter Mastricht</p> -->
+				<br>
+
+				</div>
+			</div>
 			<div class="content-wrap caso animation" id="1">
 				<div class="content content--layout content--layout-1">
-			<img class="content__img" src="img/idea.png" alt="Some image" />
-			<h4 class="content__desc about-t">Covid has had an important impact on all our habits, prompting us to <span style="color:#E6E948;">create</span> new and intelligent solutions to continue to perform our daily lives in the best possible way.
-The quarantine limited our movements to the point that our only social relationships place inside our home via <span style="color:#E6E948;">videocall</span>.
-The activities did not stop and neither did the session of the Polytechnic, leaving us with the only possibility to work remotely. So I asked myself: How much time did I spend on videocall <span style="color:#E6E948;">during my sessions?</span>
-</h4>
-					<h1 class="content__title">The Idea</h1>
+			<img class="content__img" src="img/time.png" alt="Some image" />
+			<h4 class="content__desc">If you got your time back, how many things could you do?</h4>
+					<h1 class="content__title" id="tit">in 323 hours <br>you can:</h1>
 		<!--			<p class="content__author">Walter Mastricht</p> -->
 				<br>
 
@@ -83,23 +103,20 @@ The activities did not stop and neither did the session of the Polytechnic, leav
 			</div>
 			<div class="content-wrap caso animation" id="2">
 				<div class="content content--layout content--layout-2">
-					<img class="content__img" src="img/translation.png" alt="Some image" />
-					<h1 class="content__title">Translation</h1>
+					<img class="content__img" src="img/5.jpg" alt="Some image" />
+					<h3 class="content__title">bunch</h3>
 			<!--		<p class="content__author">Nikimo Westlane</p> -->
-					<h4 class="content__desc about-tt">The project aims to describe people’s <span style="color:#E6E948;">perception of time</span>: We are not aware of how much time we spent doing repetitive actions. The translation of a specific amount of time in different ways, like read a book or take a trip, lead the user to reflect about the <span style="color:#E6E948;">distortion</span> of time.</h4>
-
+					<p class="content__desc">The neverending quest, once and forever.</p>
+					<a href="#" class="content__link">Discover</a>
 				</div>
 			</div>
-
-			<div class="content-wrap caso animation">
-				<div class="content content--layout content--layout-2">
-					<img class="content__img" src="img/credits.png" alt="Some image" />
-					<h1 class="content__title">Credits</h1>
+			<div class="content-wrap caso animation" id="3">
+				<div class="content content--layout content--layout-3">
+					<img class="content__img" src="img/3.jpg" alt="Some image" />
+					<h3 class="content__title">found</h3>
 			<!--		<p class="content__author">Jane Westhall</p> -->
-					<h4 class="content__desc" id="creditss">Final Synthesis Design Studio Infopoetry 2020/2021<br><br> 323 hours - Personal Data<br><br> Student: Claudia Maria Cutrupi <br>Professor: Salvatore Zingale</h4>
-
-
-
+					<p class="content__desc">Lost or found? That's the question today.</p>
+					<a href="#" class="content__link">Discover</a>
 				</div>
 			</div>
 	<!--		<div class="content-wrap">
@@ -122,7 +139,6 @@ The activities did not stop and neither did the session of the Polytechnic, leav
 			</div> -->
 			<!-- Related demos -->
 			<section class="content content--related">
-
 		<!--		<p class="content__info">If you enjoyed this demo you might also like:</p>
 				<a class="content__related-item" href="https://tympanus.net/Development/ElasticSVGElements/">
 					<img class="content__related-img" src="img/related/ItemRevealer.jpg">
