--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 			if (!supportsCssVars()) alert('Please view this demo in a modern browser that supports CSS Variables.')
 		</script>
 	</head>
-	<body class="demo-3 loading">
+	<body class="demo-3 loading" >
 		<svg class="hidden">
 			<symbol id="icon-arrow" viewBox="0 0 24 24">
 				<title>arrow</title>
@@ -44,7 +44,7 @@
 				<path d="M 6.144,74.1 C 20.4,107.4 70.13,94.33 94.22,95.74 121.3,97.41 130.8,101.1 154.7,99.38 178.6,97.72 201.9,78.95 199.4,46.86 197.1,14.96 174.9,4.781 161.4,1.827 147.9,-1.128 119.8,8.284 105.6,8.766 85.34,9.449 81.91,7.628 51.08,2.334 17.26,-3.482 -8.105,40.84 6.144,74.1 Z" />
 			</symbol>
 		</svg>
-		<main>
+		<main >
 			<div class="morph-wrap">
 				<svg class="morph" width="1400" height="770" viewBox="0 0 1400 770">
 					<polygon points="700,84.4 1047.1,685.6 352.9,685.6 352.9,685.6 352.9,685.6 352.9,685.6"/>
@@ -62,9 +62,7 @@
 						<a href="combinations.html" class=" roba hover-target animsition-link padding-element">
 							<h4>All combinations</h4>
 						</a>
-						<a href="combo.html" class=" roba hover-target animsition-link padding-element">
-							<h4>prova</h4>
-						</a>
+			
 						<div class="menu-icon hover-target">
 						</div>
 					</div>
@@ -72,6 +70,16 @@
 			</header>
 
 				<div class="position" id="shuffle">
+					<div class="content-wrap caso animation" id="0" >
+				<div class="content content--layout content--layout-1">
+			<img class="content__img" src="img/time.png" alt="Some image" />
+			<h4 class="content__desc">If you got your time back, how many things could you do?</h4>
+					<h1 class="content__title" id="tit">in 323 hours <br>you can:</h1>
+		<!--			<p class="content__author">Walter Mastricht</p> -->
+				<br>
+
+				</div>
+			</div>
 		<!--		<div class="button" id="shuffle"> <p>Shuffle</p></div> -->
 
 
@@ -80,45 +88,167 @@
 		<input class="shuf" type="button" onclick="getItem()" value="shuffle"/>
 	    </div>
 
-
-			<div class="content-wrap caso" id="0">
+	    	<div class="content-wrap caso" id="1" style="display: none">
 				<div class="content content--layout content--layout-1">
-			<img class="content__img" src="img/time.png" alt="Some image" />
-			<h4 class="content__desc">If you got your time back, how many things could you do?</h4>
-					<h1 class="content__title" id="tit">in 323 hours <br>you can:</h1>
+			<img class="content__img" src="/img/trip.png" alt="Some image" />
+			<h4 class="content__desc">Take a flight <br>from Milan to Tokyo </h4>
+					<h1 class="content__title">23,83 <br> times</h1>
+					<a href="combinations.html" class="content__link">Trips</a>
 		<!--			<p class="content__author">Walter Mastricht</p> -->
-				<br>
 
 				</div>
 			</div>
-			<div class="content-wrap caso animation" id="1">
-				<div class="content content--layout content--layout-1">
-			<img class="content__img" src="img/time.png" alt="Some image" />
-			<h4 class="content__desc">If you got your time back, how many things could you do?</h4>
-					<h1 class="content__title" id="tit">in 323 hours <br>you can:</h1>
-		<!--			<p class="content__author">Walter Mastricht</p> -->
-				<br>
 
-				</div>
-			</div>
-			<div class="content-wrap caso animation" id="2">
+			<div class="content-wrap caso" id="2" style="display: none">
 				<div class="content content--layout content--layout-2">
-					<img class="content__img" src="img/5.jpg" alt="Some image" />
-					<h3 class="content__title">bunch</h3>
+					<img class="content__img" src="/img/trip.png" alt="Some image" />
+					<h1 class="content__title">20,06 <br>times</h1>
 			<!--		<p class="content__author">Nikimo Westlane</p> -->
-					<p class="content__desc">The neverending quest, once and forever.</p>
-					<a href="#" class="content__link">Discover</a>
+					<h4 class="content__desc">Take a flight <br>from Milan to Buenos Aires</h4>
+					<a href="combinations.html" class="content__link">Trips</a>
 				</div>
 			</div>
-			<div class="content-wrap caso animation" id="3">
+
+			<div class="content-wrap caso" id="3" style="display: none">
 				<div class="content content--layout content--layout-3">
-					<img class="content__img" src="img/3.jpg" alt="Some image" />
-					<h3 class="content__title">found</h3>
+					<img class="content__img" src="/img/trip.png" alt="Some image" />
+					<h1 class="content__title">1 time</h1>
 			<!--		<p class="content__author">Jane Westhall</p> -->
-					<p class="content__desc">Lost or found? That's the question today.</p>
-					<a href="#" class="content__link">Discover</a>
+					<h4 class="content__desc">Walking from Reggio Calabria to Czech Republic</h4>
+					<a href="combinations.html" class="content__link">Trips</a>
 				</div>
 			</div>
+
+			<div class="content-wrap caso" id="4" style="display: none">
+				<div class="content content--layout content--layout-1">
+			<img class="content__img" src="/img/trip.png" alt="Some image" />
+			<h4 class="content__desc">Flying from Milan <br>to Shanghai a/r </h4>
+					<h1 class="content__title">14 times</h1>
+					<a href="combinations.html" class="content__link">Trips</a>
+		<!--			<p class="content__author">Walter Mastricht</p> -->
+
+				</div>
+			</div>
+
+			<div class="content-wrap caso" id="5" style="display: none">
+				<div class="content content--layout content--layout-2">
+					<img class="content__img" src="/img/music.png" alt="Some image" />
+					<h1 class="content__title">131,83 <br>times</h1>
+			<!--		<p class="content__author">Nikimo Westlane</p> -->
+					<h4 class="content__desc">Listening PAZZESKA <br>by MYSS KETA</h4>
+					<a href="combinations.html" class="content__link">Music</a>
+				</div>
+			</div>
+
+			<div class="content-wrap caso" id="6" style="display: none">
+				<div class="content content--layout content--layout-3" style="display: none">
+					<img class="content__img" src="/img/trip.png" alt="Some image" />
+					<h1 class="content__title">4,14 times</h1>
+			<!--		<p class="content__author">Jane Westhall</p> -->
+					<h4 class="content__desc">Travel all over <br>Italy with a bicycle</h4>
+					<a href="combinations.html" class="content__link">Trips</a>
+				</div>
+			</div>
+
+
+						<div class="content-wrap caso" id="7" style="display: none">
+							<div class="content content--layout content--layout-1">
+						<img class="content__img" src="/img/music.png" alt="Some image" />
+						<h4 class="content__desc">Listening Non Me Lo So Spiegare by Tiziano Ferro</h4>
+								<h1 class="content__title">23,83 <br> times</h1>
+								<a href="combinations.html" class="content__link">Music</a>
+					<!--			<p class="content__author">Walter Mastricht</p> -->
+
+							</div>
+						</div>
+
+						<div class="content-wrap caso" id="8" style="display: none">
+							<div class="content content--layout content--layout-2">
+								<img class="content__img" src="/img/book.png" alt="Some image" />
+								<h1 class="content__title">6,59 <br>times</h1>
+						<!--		<p class="content__author">Nikimo Westlane</p> -->
+								<h4 class="content__desc">Reading the Bible</h4>
+								<a href="combinations.html" class="content__link">Books</a>
+							</div>
+						</div>
+
+						<div class="content-wrap caso" id="9" style="display: none">
+							<div class="content content--layout content--layout-3">
+								<img class="content__img" src="/img/trip.png" alt="Some image" />
+								<h1 class="content__title">1 time</h1>
+						<!--		<p class="content__author">Jane Westhall</p> -->
+								<h4 class="content__desc"></h4>
+								<a href="combinations.html" class="content__link">Trips</a>
+							</div>
+						</div>
+
+
+									<div class="content-wrap caso" id="10" style="display: none">
+										<div class="content content--layout content--layout-1">
+									<img class="content__img" src="/img/trip.png" alt="Some image" />
+									<h4 class="content__desc"></h4>
+											<h1 class="content__title">23,83 <br> times</h1>
+											<a href="combinations.html" class="content__link">Trips</a>
+								<!--			<p class="content__author">Walter Mastricht</p> -->
+
+										</div>
+									</div>
+
+									<div class="content-wrap caso" id="11" style="display: none">
+										<div class="content content--layout content--layout-2">
+											<img class="content__img" src="/img/trip.png" alt="Some image" />
+											<h1 class="content__title">20,06 <br>times</h1>
+									<!--		<p class="content__author">Nikimo Westlane</p> -->
+											<h4 class="content__desc"></h4>
+											<a href="combinations.html" class="content__link">Trips</a>
+										</div>
+									</div>
+
+									<div class="content-wrap caso" id="12" style="display: none">
+										<div class="content content--layout content--layout-3">
+											<img class="content__img" src="/img/trip.png" alt="Some image" />
+											<h1 class="content__title">1 time</h1>
+									<!--		<p class="content__author">Jane Westhall</p> -->
+											<h4 class="content__desc"></h4>
+											<a href="combinations.html" class="content__link">Trips</a>
+										</div>
+									</div>
+
+
+
+												<div class="content-wrap caso" id="13" style="display: none">
+													<div class="content content--layout content--layout-1">
+												<img class="content__img" src="/img/trip.png" alt="Some image" />
+												<h4 class="content__desc"></h4>
+														<h1 class="content__title">23,83 <br> times</h1>
+														<a href="combinations.html" class="content__link">Trips</a>
+											<!--			<p class="content__author">Walter Mastricht</p> -->
+
+													</div>
+												</div>
+
+												<div class="content-wrap caso" id="14" style="display: none">
+													<div class="content content--layout content--layout-2">
+														<img class="content__img" src="/img/trip.png" alt="Some image" />
+														<h1 class="content__title">20,06 <br>times</h1>
+												<!--		<p class="content__author">Nikimo Westlane</p> -->
+														<h4 class="content__desc"></h4>
+														<a href="combinations.html" class="content__link">Trips</a>
+													</div>
+												</div>
+
+												<div class="content-wrap caso" id="15" style="display: none">
+													<div class="content content--layout content--layout-3">
+														<img class="content__img" src="/img/trip.png" alt="Some image" />
+														<h1 class="content__title">1 time</h1>
+												<!--		<p class="content__author">Jane Westhall</p> -->
+														<h4 class="content__desc"></h4>
+														<a href="combinations.html" class="content__link">Trips</a>
+													</div>
+												</div>
+
+
+
 	<!--		<div class="content-wrap">
 				<div class="content content--layout content--layout-4">
 					<img class="content__img" src="img/4.jpg" alt="Some image" />
