--- a/combinations.html
+++ b/combinations.html
@@ -96,17 +96,17 @@
 		</div>
 
 		<div class="container space2">
-		  <div class="filterDiv movies">BMW</div>
-		  <div class="filterDiv music trips">Orange</div>
-		  <div class="filterDiv movies">Volvo</div>
-		  <div class="filterDiv music">Red</div>
-		  <div class="filterDiv movies books">Mustang</div>
-		  <div class="filterDiv music">Blue</div>
-		  <div class="filterDiv books">Cat</div>
-		  <div class="filterDiv books">Dog</div>
-		  <div class="filterDiv trips">Melon</div>
-		  <div class="filterDiv trips books">Kiwi</div>
-		  <div class="filterDiv trips">Banana</div>
+		  <div class="filterDiv trips">Take a flight from Milan to Tokyo 23,83 times</div>
+		  <div class="filterDiv trips">Walking from Reggio Calabria to Czech Republic 1 time</div>
+		  <div class="filterDiv music">Listening PAZZESKA by MYSS KETA 131,83 times</div>
+		  <div class="filterDiv books">Reading the Bible 6,59 times</div>
+		  <div class="filterDiv trips">Travel all over Italy with a bicycle 4,14 times</div>
+		  <div class="filterDiv trips">Flying from Milan to Shanghai a/r 14 times</div>
+		  <div class="filterDiv music">Listening Non Me Lo So Spiegare by Tiziano Ferro 23,83 times</div>
+		  <div class="filterDiv trips">Take a flight from Milan to Buenos Aires 20,06 times</div>
+		  <div class="filterDiv cook">Cooking an Apple Pie 323,25 times</div>
+		  <div class="filterDiv movies">Watching the Trilogy of Lord of the Rings (extended versions) 26,91 times</div>
+		  <div class="filterDiv cook">Cooking a "parmigiana" 161,5 times</div>
 		  <div class="filterDiv trips">Lemon</div>
 		  <div class="filterDiv books">Cow</div>
 		</div>
