--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 				 				<!-- <a href="home.html" class="content__title-sub">enter</a> -->
 				 		<a href="home.html" class="content__title-sub font-wide justify-content-center align-self-center" style="z-index:2000;">323 HOURS</a>
 				 	</h2>
-					<h4 class="content__subtitle justify-content-center align-self-center">what can you do with the <span style="color:#E6E948;">time</span> you have?</h4>
+					<h4 class="content__subtitle justify-content-center align-self-center">what could you do with the <span style="color:#E6E948;">time</span> you have?</h4>
 				 	</div>
 
 <!-- DIV LEVETTA + ON / OFF -->
