--- a/combinations.html
+++ b/combinations.html
@@ -44,7 +44,7 @@
   border: none;
   outline: none;
   padding: 12px 16px;
-	margin-right: 8.43em;
+	margin-right: 7.7em;
 	background-color: white;
 	border: none;
 	color: #56CCCF;
@@ -91,7 +91,7 @@
 		  <button class="btn" onclick="filterSelection('movies')"> Movies&Series</button>
 		  <button class="btn" onclick="filterSelection('books')"> Books</button>
 		  <button class="btn" onclick="filterSelection('trips')"> Trips</button>
-		  <button class="btn" onclick="filterSelection('music')"> Music</button>
+		  <button class="btn" onclick="filterSelection('music')"> Music&Podcast</button>
 			<button class="btn" onclick="filterSelection('cook')"> Cooking</button>
 		</div>
 
@@ -103,12 +103,21 @@
 		  <div class="filterDiv trips">Travel all over Italy with a bicycle 4,14 times</div>
 		  <div class="filterDiv trips">Flying from Milan to Shanghai a/r 14 times</div>
 		  <div class="filterDiv music">Listening Non Me Lo So Spiegare by Tiziano Ferro 23,83 times</div>
+			<div class="filterDiv movies">Watching the first season of The Office 146,15 times</div>
 		  <div class="filterDiv trips">Take a flight from Milan to Buenos Aires 20,06 times</div>
 		  <div class="filterDiv cook">Cooking an Apple Pie 323,25 times</div>
 		  <div class="filterDiv movies">Watching the Trilogy of Lord of the Rings (extended versions) 26,91 times</div>
 		  <div class="filterDiv cook">Cooking a "parmigiana" 161,5 times</div>
-		  <div class="filterDiv trips">Lemon</div>
-		  <div class="filterDiv books">Cow</div>
+		  <div class="filterDiv cook">Preparing a waffle 3370 times</div>
+		  <div class="filterDiv movies">Watch the entire Harry Potter Saga 20,18 times</div>
+			<div class="filterDiv books">Reading Animal Farm by George Orwell 102,86 times</div>
+			<div class="filterDiv cook">Preparing a cream bignè 371,45 times</div>
+			<div class="filterDiv movies">Re-watch the first episode of Sanremo 2020 83,67 times</div>
+			<div class="filterDiv music">Listening 43 episode of Muschio Selviaggio Podcast 9 times</div>
+			<div class="filterDiv trip">Drive across Route 66 1,2 times</div>
+			<div class="filterDiv music">Listening "Live al Wimbley Stadium" by Queen 213,90 times</div>
+
+
 		</div>
 
 </div>
