--- a/combinations.html
+++ b/combinations.html
@@ -113,7 +113,7 @@
 			<div class="filterDiv books">Reading Animal Farm by George Orwell 102,86 times</div>
 			<div class="filterDiv cook">Preparing a cream bignè 371,45 times</div>
 			<div class="filterDiv movies">Re-watch the first episode of Sanremo 2020 83,67 times</div>
-			<div class="filterDiv music">Listening 43 episode of Muschio Selviaggio Podcast 9 times</div>
+			<div class="filterDiv music">Listening all 43 episodes of Muschio Selviaggio Podcast 9 times</div>
 			<div class="filterDiv trip">Drive across Route 66 1,2 times</div>
 			<div class="filterDiv music">Listening "Live al Wimbley Stadium" by Queen 213,90 times</div>
 
