--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
 						<a href="combinations.html" class=" roba hover-target animsition-link padding-element">
 							<h4>All combinations</h4>
 						</a>
-			
+
 						<div class="menu-icon hover-target">
 						</div>
 					</div>
@@ -136,7 +136,7 @@
 					<h1 class="content__title">131,83 <br>times</h1>
 			<!--		<p class="content__author">Nikimo Westlane</p> -->
 					<h4 class="content__desc">Listening PAZZESKA <br>by MYSS KETA</h4>
-					<a href="combinations.html" class="content__link">Music</a>
+					<a href="combinations.html" class="content__link">Music&Podcast</a>
 				</div>
 			</div>
 
@@ -156,7 +156,7 @@
 						<img class="content__img" src="/img/music.png" alt="Some image" />
 						<h4 class="content__desc">Listening Non Me Lo So Spiegare by Tiziano Ferro</h4>
 								<h1 class="content__title">23,83 <br> times</h1>
-								<a href="combinations.html" class="content__link">Music</a>
+								<a href="combinations.html" class="content__link">Music&Podcast</a>
 					<!--			<p class="content__author">Walter Mastricht</p> -->
 
 							</div>
@@ -168,27 +168,27 @@
 								<h1 class="content__title">6,59 <br>times</h1>
 						<!--		<p class="content__author">Nikimo Westlane</p> -->
 								<h4 class="content__desc">Reading the Bible</h4>
-								<a href="combinations.html" class="content__link">Books</a>
+								<a href="combinations.html" class="content__link">Books&Podcasts</a>
 							</div>
 						</div>
 
 						<div class="content-wrap caso" id="9" style="display: none">
 							<div class="content content--layout content--layout-3">
-								<img class="content__img" src="/img/trip.png" alt="Some image" />
-								<h1 class="content__title">1 time</h1>
+								<img class="content__img" src="/img/tv.png" alt="Some image" />
+								<h1 class="content__title">146,15 times</h1>
 						<!--		<p class="content__author">Jane Westhall</p> -->
-								<h4 class="content__desc"></h4>
-								<a href="combinations.html" class="content__link">Trips</a>
+								<h4 class="content__desc">Watching the first season of The Office</h4>
+								<a href="combinations.html" class="content__link">Movies&Series</a>
 							</div>
 						</div>
 
 
 									<div class="content-wrap caso" id="10" style="display: none">
 										<div class="content content--layout content--layout-1">
-									<img class="content__img" src="/img/trip.png" alt="Some image" />
-									<h4 class="content__desc"></h4>
-											<h1 class="content__title">23,83 <br> times</h1>
-											<a href="combinations.html" class="content__link">Trips</a>
+									<img class="content__img" src="/img/cup.png" alt="Some image" />
+									<h4 class="content__desc">Cooking an Apple Pie</h4>
+											<h1 class="content__title">323,25 times</h1>
+											<a href="combinations.html" class="content__link">Cooking</a>
 								<!--			<p class="content__author">Walter Mastricht</p> -->
 
 										</div>
@@ -196,21 +196,21 @@
 
 									<div class="content-wrap caso" id="11" style="display: none">
 										<div class="content content--layout content--layout-2">
-											<img class="content__img" src="/img/trip.png" alt="Some image" />
-											<h1 class="content__title">20,06 <br>times</h1>
+											<img class="content__img" src="/img/tv.png" alt="Some image" />
+											<h1 class="content__title">26,91 times</h1>
 									<!--		<p class="content__author">Nikimo Westlane</p> -->
-											<h4 class="content__desc"></h4>
-											<a href="combinations.html" class="content__link">Trips</a>
+											<h4 class="content__desc">Watching the Trilogy of Lord of the Rings (extended versions)</h4>
+											<a href="combinations.html" class="content__link">Movies&Series</a>
 										</div>
 									</div>
 
 									<div class="content-wrap caso" id="12" style="display: none">
 										<div class="content content--layout content--layout-3">
-											<img class="content__img" src="/img/trip.png" alt="Some image" />
-											<h1 class="content__title">1 time</h1>
+											<img class="content__img" src="/img/cup.png" alt="Some image" />
+											<h1 class="content__title">161,5 times</h1>
 									<!--		<p class="content__author">Jane Westhall</p> -->
-											<h4 class="content__desc"></h4>
-											<a href="combinations.html" class="content__link">Trips</a>
+											<h4 class="content__desc">Cooking a "parmigiana"</h4>
+											<a href="combinations.html" class="content__link">Cooking</a>
 										</div>
 									</div>
 
@@ -218,10 +218,10 @@
 
 												<div class="content-wrap caso" id="13" style="display: none">
 													<div class="content content--layout content--layout-1">
-												<img class="content__img" src="/img/trip.png" alt="Some image" />
-												<h4 class="content__desc"></h4>
-														<h1 class="content__title">23,83 <br> times</h1>
-														<a href="combinations.html" class="content__link">Trips</a>
+												<img class="content__img" src="/img/cup.png" alt="Some image" />
+												<h4 class="content__desc">Preparing a waffle</h4>
+														<h1 class="content__title">3370 times</h1>
+														<a href="combinations.html" class="content__link">Cooking</a>
 											<!--			<p class="content__author">Walter Mastricht</p> -->
 
 													</div>
@@ -229,24 +229,77 @@
 
 												<div class="content-wrap caso" id="14" style="display: none">
 													<div class="content content--layout content--layout-2">
-														<img class="content__img" src="/img/trip.png" alt="Some image" />
+														<img class="content__img" src="/img/tv.png" alt="Some image" />
 														<h1 class="content__title">20,06 <br>times</h1>
 												<!--		<p class="content__author">Nikimo Westlane</p> -->
-														<h4 class="content__desc"></h4>
-														<a href="combinations.html" class="content__link">Trips</a>
+														<h4 class="content__desc">Watch the entire Harry Potter Saga</h4>
+														<a href="combinations.html" class="content__link">Movies&Series</a>
 													</div>
 												</div>
 
 												<div class="content-wrap caso" id="15" style="display: none">
 													<div class="content content--layout content--layout-3">
-														<img class="content__img" src="/img/trip.png" alt="Some image" />
+														<img class="content__img" src="/img/book.png" alt="Some image" />
 														<h1 class="content__title">1 time</h1>
 												<!--		<p class="content__author">Jane Westhall</p> -->
-														<h4 class="content__desc"></h4>
-														<a href="combinations.html" class="content__link">Trips</a>
+														<h4 class="content__desc">Reading Animal Farm by George Orwell</h4>
+														<a href="combinations.html" class="content__link">Books&Podcasts</a>
 													</div>
 												</div>
 
+												<div class="content-wrap caso" id="16" style="display: none">
+													<div class="content content--layout content--layout-1">
+												<img class="content__img" src="/img/cup.png" alt="Some image" />
+												<h4 class="content__desc">Preparing a cream bignè</h4>
+														<h1 class="content__title">371,45 times</h1>
+														<a href="combinations.html" class="content__link">Cooking</a>
+												<!--			<p class="content__author">Walter Mastricht</p> -->
+
+													</div>
+												</div>
+
+												<div class="content-wrap caso" id="17" style="display: none">
+													<div class="content content--layout content--layout-2">
+														<img class="content__img" src="/img/tv.png" alt="Some image" />
+														<h1 class="content__title">83,67 times</h1>
+												<!--		<p class="content__author">Nikimo Westlane</p> -->
+														<h4 class="content__desc">Re-watch the first episode of Sanremo 2020</h4>
+														<a href="combinations.html" class="content__link">Movies&Series</a>
+													</div>
+												</div>
+
+												<div class="content-wrap caso" id="18" style="display: none">
+													<div class="content content--layout content--layout-3">
+														<img class="content__img" src="/img/book.png" alt="Some image" />
+														<h1 class="content__title">9 times</h1>
+												<!--		<p class="content__author">Jane Westhall</p> -->
+														<h4 class="content__desc">Listening all 43 episodes of Muschio Selviaggio Podcast</h4>
+														<a href="combinations.html" class="content__link">Books&Podcasts</a>
+													</div>
+												</div>
+
+												<div class="content-wrap caso" id="19" style="display: none">
+													<div class="content content--layout content--layout-1">
+												<img class="content__img" src="/img/trip.png" alt="Some image" />
+												<h4 class="content__desc">Drive across Route 66</h4>
+														<h1 class="content__title">1,2 times</h1>
+														<a href="combinations.html" class="content__link">Trips</a>
+											<!--			<p class="content__author">Walter Mastricht</p> -->
+
+													</div>
+												</div>
+
+												<div class="content-wrap caso" id="20" style="display: none">
+													<div class="content content--layout content--layout-2">
+														<img class="content__img" src="/img/music.png" alt="Some image" />
+														<h1 class="content__title">213,90 times</h1>
+												<!--		<p class="content__author">Nikimo Westlane</p> -->
+														<h4 class="content__desc">Listening "Live al Wimbley Stadium" by Queen</h4>
+														<a href="combinations.html" class="content__link">Music&Podcast</a>
+													</div>
+												</div>
+
+									
 
 
 	<!--		<div class="content-wrap">
