--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="A page background effect where SVG shapes morph and transform on scroll" />
 		<meta name="keywords" content="background, svg, morph, animation, scroll, shape, web development, css, javascript" />
 		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="/img/time.png">
+		<link rel="shortcut icon" href="./img/time.png">
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
@@ -90,7 +90,7 @@
 
 	    	<div class="content-wrap caso" id="1" style="display: none">
 				<div class="content content--layout content--layout-1">
-			<img class="content__img" src="/img/trip.png" alt="Some image" />
+			<img class="content__img" src="./img/trip.png" alt="Some image" />
 			<h4 class="content__desc">Take a flight <br>from Milan to Tokyo </h4>
 					<h1 class="content__title">23,83 <br> times</h1>
 					<a href="combinations.html" class="content__link">Trips</a>
@@ -101,7 +101,7 @@
 
 			<div class="content-wrap caso" id="2" style="display: none">
 				<div class="content content--layout content--layout-2">
-					<img class="content__img" src="/img/trip.png" alt="Some image" />
+					<img class="content__img" src="./img/trip.png" alt="Some image" />
 					<h1 class="content__title">20,06 <br>times</h1>
 			<!--		<p class="content__author">Nikimo Westlane</p> -->
 					<h4 class="content__desc">Take a flight <br>from Milan to Buenos Aires</h4>
@@ -111,7 +111,7 @@
 
 			<div class="content-wrap caso" id="3" style="display: none">
 				<div class="content content--layout content--layout-3">
-					<img class="content__img" src="/img/trip.png" alt="Some image" />
+					<img class="content__img" src="./img/trip.png" alt="Some image" />
 					<h1 class="content__title">1 time</h1>
 			<!--		<p class="content__author">Jane Westhall</p> -->
 					<h4 class="content__desc">Walking from Reggio Calabria to Czech Republic</h4>
@@ -121,7 +121,7 @@
 
 			<div class="content-wrap caso" id="4" style="display: none">
 				<div class="content content--layout content--layout-1">
-			<img class="content__img" src="/img/trip.png" alt="Some image" />
+			<img class="content__img" src="./img/trip.png" alt="Some image" />
 			<h4 class="content__desc">Flying from Milan <br>to Shanghai a/r </h4>
 					<h1 class="content__title">14 times</h1>
 					<a href="combinations.html" class="content__link">Trips</a>
@@ -132,7 +132,7 @@
 
 			<div class="content-wrap caso" id="5" style="display: none">
 				<div class="content content--layout content--layout-2">
-					<img class="content__img" src="/img/music.png" alt="Some image" />
+					<img class="content__img" src="./img/music.png" alt="Some image" />
 					<h1 class="content__title">131,83 <br>times</h1>
 			<!--		<p class="content__author">Nikimo Westlane</p> -->
 					<h4 class="content__desc">Listening PAZZESKA <br>by MYSS KETA</h4>
@@ -142,7 +142,7 @@
 
 			<div class="content-wrap caso" id="6" style="display: none">
 				<div class="content content--layout content--layout-3" style="display: none">
-					<img class="content__img" src="/img/trip.png" alt="Some image" />
+					<img class="content__img" src="./img/trip.png" alt="Some image" />
 					<h1 class="content__title">4,14 times</h1>
 			<!--		<p class="content__author">Jane Westhall</p> -->
 					<h4 class="content__desc">Travel all over <br>Italy with a bicycle</h4>
@@ -153,7 +153,7 @@
 
 						<div class="content-wrap caso" id="7" style="display: none">
 							<div class="content content--layout content--layout-1">
-						<img class="content__img" src="/img/music.png" alt="Some image" />
+						<img class="content__img" src="./img/music.png" alt="Some image" />
 						<h4 class="content__desc">Listening Non Me Lo So Spiegare by Tiziano Ferro</h4>
 								<h1 class="content__title">23,83 <br> times</h1>
 								<a href="combinations.html" class="content__link">Music&Podcast</a>
@@ -164,7 +164,7 @@
 
 						<div class="content-wrap caso" id="8" style="display: none">
 							<div class="content content--layout content--layout-2">
-								<img class="content__img" src="/img/book.png" alt="Some image" />
+								<img class="content__img" src="./img/book.png" alt="Some image" />
 								<h1 class="content__title">6,59 <br>times</h1>
 						<!--		<p class="content__author">Nikimo Westlane</p> -->
 								<h4 class="content__desc">Reading the Bible</h4>
@@ -174,7 +174,7 @@
 
 						<div class="content-wrap caso" id="9" style="display: none">
 							<div class="content content--layout content--layout-3">
-								<img class="content__img" src="/img/tv.png" alt="Some image" />
+								<img class="content__img" src="./img/tv.png" alt="Some image" />
 								<h1 class="content__title">146,15 times</h1>
 						<!--		<p class="content__author">Jane Westhall</p> -->
 								<h4 class="content__desc">Watching the first season of The Office</h4>
@@ -185,7 +185,7 @@
 
 									<div class="content-wrap caso" id="10" style="display: none">
 										<div class="content content--layout content--layout-1">
-									<img class="content__img" src="/img/cup.png" alt="Some image" />
+									<img class="content__img" src="./img/cup.png" alt="Some image" />
 									<h4 class="content__desc">Cooking an Apple Pie</h4>
 											<h1 class="content__title">323,25 times</h1>
 											<a href="combinations.html" class="content__link">Cooking</a>
@@ -196,7 +196,7 @@
 
 									<div class="content-wrap caso" id="11" style="display: none">
 										<div class="content content--layout content--layout-2">
-											<img class="content__img" src="/img/tv.png" alt="Some image" />
+											<img class="content__img" src="./img/tv.png" alt="Some image" />
 											<h1 class="content__title">26,91 times</h1>
 									<!--		<p class="content__author">Nikimo Westlane</p> -->
 											<h4 class="content__desc">Watching the Trilogy of Lord of the Rings (extended versions)</h4>
@@ -206,7 +206,7 @@
 
 									<div class="content-wrap caso" id="12" style="display: none">
 										<div class="content content--layout content--layout-3">
-											<img class="content__img" src="/img/cup.png" alt="Some image" />
+											<img class="content__img" src="./img/cup.png" alt="Some image" />
 											<h1 class="content__title">161,5 times</h1>
 									<!--		<p class="content__author">Jane Westhall</p> -->
 											<h4 class="content__desc">Cooking a "parmigiana"</h4>
@@ -218,7 +218,7 @@
 
 												<div class="content-wrap caso" id="13" style="display: none">
 													<div class="content content--layout content--layout-1">
-												<img class="content__img" src="/img/cup.png" alt="Some image" />
+												<img class="content__img" src="./img/cup.png" alt="Some image" />
 												<h4 class="content__desc">Preparing a waffle</h4>
 														<h1 class="content__title">3370 times</h1>
 														<a href="combinations.html" class="content__link">Cooking</a>
@@ -229,7 +229,7 @@
 
 												<div class="content-wrap caso" id="14" style="display: none">
 													<div class="content content--layout content--layout-2">
-														<img class="content__img" src="/img/tv.png" alt="Some image" />
+														<img class="content__img" src="./img/tv.png" alt="Some image" />
 														<h1 class="content__title">20,06 <br>times</h1>
 												<!--		<p class="content__author">Nikimo Westlane</p> -->
 														<h4 class="content__desc">Watch the entire Harry Potter Saga</h4>
@@ -239,7 +239,7 @@
 
 												<div class="content-wrap caso" id="15" style="display: none">
 													<div class="content content--layout content--layout-3">
-														<img class="content__img" src="/img/book.png" alt="Some image" />
+														<img class="content__img" src="./img/book.png" alt="Some image" />
 														<h1 class="content__title">1 time</h1>
 												<!--		<p class="content__author">Jane Westhall</p> -->
 														<h4 class="content__desc">Reading Animal Farm by George Orwell</h4>
@@ -249,7 +249,7 @@
 
 												<div class="content-wrap caso" id="16" style="display: none">
 													<div class="content content--layout content--layout-1">
-												<img class="content__img" src="/img/cup.png" alt="Some image" />
+												<img class="content__img" src="./img/cup.png" alt="Some image" />
 												<h4 class="content__desc">Preparing a cream bignè</h4>
 														<h1 class="content__title">371,45 times</h1>
 														<a href="combinations.html" class="content__link">Cooking</a>
@@ -260,7 +260,7 @@
 
 												<div class="content-wrap caso" id="17" style="display: none">
 													<div class="content content--layout content--layout-2">
-														<img class="content__img" src="/img/tv.png" alt="Some image" />
+														<img class="content__img" src="./img/tv.png" alt="Some image" />
 														<h1 class="content__title">83,67 times</h1>
 												<!--		<p class="content__author">Nikimo Westlane</p> -->
 														<h4 class="content__desc">Re-watch the first episode of Sanremo 2020</h4>
@@ -270,7 +270,7 @@
 
 												<div class="content-wrap caso" id="18" style="display: none">
 													<div class="content content--layout content--layout-3">
-														<img class="content__img" src="/img/book.png" alt="Some image" />
+														<img class="content__img" src="./img/book.png" alt="Some image" />
 														<h1 class="content__title">9 times</h1>
 												<!--		<p class="content__author">Jane Westhall</p> -->
 														<h4 class="content__desc">Listening all 43 episodes of Muschio Selviaggio Podcast</h4>
@@ -280,7 +280,7 @@
 
 												<div class="content-wrap caso" id="19" style="display: none">
 													<div class="content content--layout content--layout-1">
-												<img class="content__img" src="/img/trip.png" alt="Some image" />
+												<img class="content__img" src="./img/trip.png" alt="Some image" />
 												<h4 class="content__desc">Drive across Route 66</h4>
 														<h1 class="content__title">1,2 times</h1>
 														<a href="combinations.html" class="content__link">Trips</a>
@@ -291,7 +291,7 @@
 
 												<div class="content-wrap caso" id="20" style="display: none">
 													<div class="content content--layout content--layout-2">
-														<img class="content__img" src="/img/music.png" alt="Some image" />
+														<img class="content__img" src="./img/music.png" alt="Some image" />
 														<h1 class="content__title">213,90 times</h1>
 												<!--		<p class="content__author">Nikimo Westlane</p> -->
 														<h4 class="content__desc">Listening "Live al Wimbley Stadium" by Queen</h4>
@@ -299,7 +299,7 @@
 													</div>
 												</div>
 
-									
+
 
 
 	<!--		<div class="content-wrap">
