--- a/home.html
+++ b/home.html
@@ -133,7 +133,7 @@
 			<div class="content-wrap caso" id="5" style="display: none">
 				<div class="content content--layout content--layout-2">
 					<img class="content__img" src="./img/music.png" alt="Some image" />
-					<h1 class="content__title">131,83 <br>times</h1>
+					<h1 class="content__title">7913,5 <br>times</h1>
 			<!--		<p class="content__author">Nikimo Westlane</p> -->
 					<h4 class="content__desc">Listening PAZZESKA <br>by MYSS KETA</h4>
 					<a href="combinations.html" class="content__link">Music&Podcast</a>
@@ -155,7 +155,7 @@
 							<div class="content content--layout content--layout-1">
 						<img class="content__img" src="./img/music.png" alt="Some image" />
 						<h4 class="content__desc">Listening Non Me Lo So Spiegare by Tiziano Ferro</h4>
-								<h1 class="content__title">23,83 <br> times</h1>
+								<h1 class="content__title">4845 times</h1>
 								<a href="combinations.html" class="content__link">Music&Podcast</a>
 					<!--			<p class="content__author">Walter Mastricht</p> -->
 
